--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
+    "build": "webpack ",
+    "start:dev": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lit-html": "^0.14.0"
+    "lit-html": "^0.14.0",
+    "materialize-css": "^1.0.0"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "purgecss-webpack-plugin": "^1.4.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.14"
   }
 }
